--- a/app/styles/_proto-app.scss
+++ b/app/styles/_proto-app.scss
@@ -1,3 +1,40 @@
 #protoapp {
   height: 100%;
 }
+
+.root-options {
+  width: 600px;
+  margin: 10px auto;
+  border: 1px solid #ddd;
+  padding: 10px;
+  .new-project {
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    font-size: 22px;
+  }
+  .or {
+    display: block;
+    margin: 10px 0;
+    text-align: center;
+    font-size: 16px;
+  }
+  .project-list {
+    li {
+      border-bottom: 1px solid #ddd;
+      &:last-child {
+        border: none;
+      }
+      a {
+        text-decoration: none;
+        display: block;
+        padding: 5px 10px;
+        font-size: 14px;
+        color: #666;
+        &:hover {
+          background-color: #eee;
+        }
+      }
+    }
+  }
+}
