--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -31,6 +31,12 @@ body>div{
   height: 100%;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 @import 'proto-app';
 @import 'mixins';
 @import 'canvas';
