--- a/app/templates/screen.hbs
+++ b/app/templates/screen.hbs
@@ -5,4 +5,4 @@
 <footer>
     <button {{bind-attr class="editDesign:active"}}{{action "setDesignView" on="click"}}>Design View</button>
     <button {{bind-attr class="editCode:active"}}{{action "setCodeView" on="click"}}>Code View</button>
-</footer>w
+</footer>
