--- a/app/templates/components/property-inspector.hbs
+++ b/app/templates/components/property-inspector.hbs
@@ -97,12 +97,10 @@
 
             <header class="sub-label" {{action 'toggleEvents'}}>Events</header>
                 <ul class="options-list">
-                    <li><label>Click</label></li>
-                    <li><label>Double Click</label></li>
-                    <li><label>Mouse Enter</label></li>
-                    <li><label>Mouse Leave</label></li>
-                    <li><label>Focus In</label></li>
-                    <li><label>Focus Out</label></li>
+                    {{#each events}}
+                        <li><label>{{name}}</label>
+                        <button {{action setCodeView type}}>Show function</button></li>
+                    {{/each}}
                 </ul>
         {{/if}}
 
