open project modal

--- a/app/styles/_property-inspector.scss
+++ b/app/styles/_property-inspector.scss
@@ -29,7 +29,7 @@
     margin: 0;
     padding: 0;
 
-    .style-button {
+    .style-button, button {
       background-color: $editor-background;
       border: 1px solid #ddd;
       padding: 5px;
