--- a/app/templates/components/property-inspector.hbs
+++ b/app/templates/components/property-inspector.hbs
@@ -61,11 +61,13 @@
                                 </li>
                                 <li><label>font-size</label> {{view Ember.TextField valueBinding="props.fontsize" action="updateFontSize" type="number"}}</li>
                                 <li><label>color</label> {{view Ember.TextField valueBinding="props.color" action="updateColor"}}</li>
-                                <li><label>style</label>
-                                <button {{bind-attr class=":style-button :fa :fa-bold canvasElement.bold:style-selected"}} {{action updateBold}}></button>
-                                <button {{bind-attr class=":style-button :fa :fa-italic canvasElement.italic:style-selected"}} {{action updateItalic}}></button>
-                                <button {{bind-attr class=":style-button :fa :fa-underline canvasElement.underline:style-selected"}} {{action updateUnderline}}></button>
-                                </li>
+                                {{#unless isPanel}}
+                                    <li><label>style</label>
+                                        <button {{bind-attr class=":style-button :fa :fa-bold canvasElement.bold:style-selected"}} {{action updateBold}}></button>
+                                        <button {{bind-attr class=":style-button :fa :fa-italic canvasElement.italic:style-selected"}} {{action updateItalic}}></button>
+                                        <button {{bind-attr class=":style-button :fa :fa-underline canvasElement.underline:style-selected"}} {{action updateUnderline}}></button>
+                                    </li>
+                                {{/unless}}
                             </ul>
                         {{/if}}
                     </li>
