--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,12 +7,15 @@
 
         <div class="project-controls">
             <span class="fa fa-file-o icons" title="New"></span>
-            <span class="fa fa-folder-open-o icons" title="Open"></span>
+            <span class="fa fa-folder-open-o icons" title="Open" {{ action openOpenProject }}></span>
             <span class="fa fa-save icons" title="Save"></span>
             <span class="fa fa-external-link-square icons" title="Export"></span>
             <span class="fa fa-play icons" title="Run"></span>
         </div>
     </header>
+
+    {{ open-modal open=open projects=projects }}
+
     <!-- # .main -->
 
     {{outlet}}
