--- a/app/templates/components/property-inspector.hbs
+++ b/app/templates/components/property-inspector.hbs
@@ -100,7 +100,7 @@
             <header class="sub-label" {{action 'toggleEvents'}}>Events</header>
                 <ul class="options-list">
                     {{#each events}}
-                        <li><label>{{name}}</label> {{isPresent}}
+                        <li><label>{{name}}</label>
                         <button {{action setCodeView type}}>Show function</button></li>
                     {{/each}}
                 </ul>
