--- a/app/templates/components/screen-modal.hbs
+++ b/app/templates/components/screen-modal.hbs
@@ -1,7 +1,7 @@
 {{#if edit}}
 <div class="screen-modal">
 
-    <div class="screen-modal-frm">
+    <div class="modal-frm">
         <label>Screen Title</label>
         {{input type="text" value=screenTitle action="saveTitle"}}
 
