--- a/app/styles/_project-tree.scss
+++ b/app/styles/_project-tree.scss
@@ -91,7 +91,7 @@
   }
 }
 
-.screen-modal {
+.screen-modal, .project-modal {
   //display: none;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.3);
@@ -100,9 +100,9 @@
   width: 100%;
   height: 100%;
   z-index: 2000;
-  .screen-modal-frm {
+  .modal-frm {
     position: absolute;
-    width: 425px;
+    width: 440px;
     height: 65px;
     top: 0;
     right: 0;
