--- a/app/styles/_canvas.scss
+++ b/app/styles/_canvas.scss
@@ -76,6 +76,11 @@
           width: auto;
         }
       }
+      &.input{
+        .inner{
+          padding-left: 10px;
+        }
+      }
     }
     /* ---- guide lines for canvas elements (when dragged across the canvas) ---- */
     .guide {
@@ -186,6 +191,11 @@
     left: 470px;
     height: auto;
 
+    .themes{
+      display:inline-block;
+      vertical-align: text-top;
+    }
+
 
     .toolbar-element {
       padding:10px;
@@ -210,8 +220,84 @@
       }
     }
   }
+  .flat {
+    .btn{
+      background-color: #90daf4;
+      @include border-radius(0);
+      border: none;
+        &:active, &:hover{
+          background-color: #70b2f4;
+        }
+    }
+    .input{
+      border: 1px solid #ccc;
+      color: #ccc;
+      @include box-shadow(inset 1px 1px 5px rgba(0,0,0,.075));
+      &:hover{
+        border: 1px solid #58bff4;
+      }
+    }
+    .panel{
+      border: none;
+    }
+  }
+  .flat-rounded {
+    .btn{
+      background-color: #a9e7f4;
+      @include border-radius(7px);
+      border: 1px solid #a6d6f4;
+      &:active, &:hover{
+        background-color: #a6d6f4;
+      }
+    }
+    .input{
+      @include border-radius(7px);
+      border: 1px solid #ccc;
+      color: #ccc;
+
+      &:hover{
+        @include box-shadow(0 0 9px rgba(140, 213, 244, 0.69));
+        border: 1px solid #58bff4;
+      }
+    }
+    .panel{
+      border:1px solid #dce8ea;
+      @include border-radius(7px);
+      background-color: #eaf4f4;
+    }
+  }
+  .bubbly{
+    .btn{
+      background-color: #529ff4;
+      @include border-radius(20px);
+      color: white;
+      @include box-shadow(inset 0 0 15px rgba(14, 29, 46, 0.5));
+      &:active, &:hover{
+        background-color: #3f80f4;
+        @include box-shadow(inset 1px 1px 15px rgba(23, 43, 71, 0.40));
+      }
+    }
+    .input{
+      @include border-radius(20px);
+      border: 1px solid #ccc;
+      color: #ccc;
+      @include box-shadow(inset 1px 1px 5px rgba(0,0,0,.075));
+
+      &:hover{
+        @include box-shadow(0 0 9px rgba(140, 213, 244, 0.69));
+        border: 1px solid #58bff4;
+      }
+    }
+    .panel{
+      @include border-radius(8px);
+      border: 1px solid #ccc;
+      background-color: #fafafa;
+    }
+  }
+
 }
 .ui-selectable-helper {
   background-color: #cc0000;
   opacity: 0.1;
 }
+
