--- a/app/templates/components/canvas.hbs
+++ b/app/templates/components/canvas.hbs
@@ -5,6 +5,11 @@
         <div class="input toolbar-element fa fa-text-width fa-2x" title="Input"></div>
         <div class="text toolbar-element fa fa-font fa-2x" title="Text"></div>
         <div class="panel toolbar-element fa fa-columns fa-2x" title="Panel"></div>
+        <span class="themes">
+            {{#each theme in themes}}
+                <button class="editor-button" {{action "chooseTheme" theme.name target="view"}}>{{theme.name}}</button>
+            {{/each}}
+        </span>
     </div>
 
     {{ view Proto.CanvasContainer id="document" contentBinding="this"}}
