--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <div class="editor clearfix">
 
-    <header class="main">
+    <header class="main" id="header">
         <h1>Proto
             {{#link-to 'index'}}Design{{/link-to}}
         </h1>
