--- a/app/templates/editor.hbs
+++ b/app/templates/editor.hbs
@@ -1,4 +1,4 @@
-<section class="sidebar">
+<section class="sidebar" id="sidebar">
 
     <aside>
         <header class="label-title">Element Inspector</header>
