--- a/app/styles/_editor.scss
+++ b/app/styles/_editor.scss
@@ -146,7 +146,7 @@ $font: "Myriad Pro", Calibri, Helvetica, Arial, sans-serif;
       float: right;
       width: 100%;
       height: 100%;
-      overflow: hidden;
+      //overflow: hidden;
 
       &>.ember-view {
         height: 93%;
