--- a/app/templates/components/canvas.hbs
+++ b/app/templates/components/canvas.hbs
@@ -1,6 +1,6 @@
 <div class="canvas-view" id="canvas-view">
 
-    <div class="toolbar">
+    <div class="toolbar" id="toolbar">
         <div class="btn toolbar-element fa fa-square-o fa-2x" title="Button"></div>
         <div class="input toolbar-element fa fa-text-width fa-2x" title="Input"></div>
         <div class="text toolbar-element fa fa-font fa-2x" title="Text"></div>
