--- a/app/templates/editor.hbs
+++ b/app/templates/editor.hbs
@@ -23,7 +23,7 @@
 </section>
 <!-- # .sidebar -->
 
-<div class="workspace">
+<div class="workspace" id="workspace">
 
     <div class="canvas-workspace">
         {{outlet}}
