--- a/app/templates/editor.hbs
+++ b/app/templates/editor.hbs
@@ -1,5 +1,10 @@
 <section class="sidebar" id="sidebar">
 
+    <div>
+        <button {{bind-attr class="editDesign:active"}}{{action "setDesignView" on="click"}}>Design View</button>
+        <button {{bind-attr class="editCode:active"}}{{action "setCodeView" on="click"}}>Code View</button>
+    </div>
+
     <aside>
         <header class="label-title">Element Inspector</header>
         {{ property-inspector
