--- a/app/templates/screen.hbs
+++ b/app/templates/screen.hbs
@@ -2,7 +2,7 @@
 
 {{view Proto.Canvas isVisibleBinding="editDesign" contentBinding="this"}}
 
-<footer id="footer">
+<!-- <footer id="footer">
     <button {{bind-attr class="editDesign:active"}}{{action "setDesignView" on="click"}}>Design View</button>
     <button {{bind-attr class="editCode:active"}}{{action "setCodeView" on="click"}}>Code View</button>
-</footer>
+</footer> -->
