--- a/app/templates/editor.hbs
+++ b/app/templates/editor.hbs
@@ -1,6 +1,6 @@
 <section class="sidebar" id="sidebar">
 
-    <div>
+    <div class="canvasToggle">
         <button {{bind-attr class="editDesign:active"}}{{action "setDesignView" on="click"}}>Design View</button>
         <button {{bind-attr class="editCode:active"}}{{action "setCodeView" on="click"}}>Code View</button>
     </div>
