--- a/app/styles/_editor.scss
+++ b/app/styles/_editor.scss
@@ -104,6 +104,32 @@ $font: "Myriad Pro", Calibri, Helvetica, Arial, sans-serif;
       padding: 0;
       list-style: none;
     }
+
+    .canvasToggle{
+      background-color: rgba(225, 82, 59, 0.85);
+      padding: 10px 0px 0px 10px; 
+
+      button {
+        display: inline-block;
+        background-color: rgb(238, 238, 238);
+        height: 40px;
+        margin-bottom: 10px;
+        padding: 10px;
+        color: #696969;
+        text-decoration: none;
+        border-radius: 5px 5px 5px 5px;
+        border: 0;
+
+        &:hover {
+          background-color: rgb(238, 228, 228);
+          cursor: pointer;
+        }
+
+        &.active {
+          background-color: $editor-background;
+        }
+      }
+    }
   }
 
 
@@ -190,4 +216,3 @@ $font: "Myriad Pro", Calibri, Helvetica, Arial, sans-serif;
 .read-only {
   background-color: #d3d3d3;
 }
-
